--- a/style.css
+++ b/style.css
@@ -185,17 +185,17 @@ p {
 
 /* === Abstract section (RH20T-style) === */
 
-.abstract {
+.minititle {
   max-width: 720px;
   margin: 60px auto;
   text-align: center;
 }
 
-.abstract h2 {
+.minititle h2 {
   margin-bottom: 14px;
 }
 
-.abstract p {
+.minititle p {
   line-height: 1.6;
   color: #333;
 }
