--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ section p {
   font-size: 18px;
   max-width: 760px;
   margin: 0 auto 40px;
-  color: #b8c0cc;
+  color: #d8dde6;
   line-height: 1.6;
 }
 
