--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ p {
 
 .minititle p {
   line-height: 1.6;
-  color: #333;
+  color: #e6e8eb;
 }
 
 .dataset-spec {
@@ -574,4 +574,11 @@ section p {
   max-width: 900px;
   margin: 0 auto 32px;
   text-align: center;
+}
+
+/* FORCE readable text on dark background */
+section p,
+section li,
+section ul {
+  color: #cfd6e1 !important;
 }
