--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@ section h2 {
   border-bottom: 1px solid rgba(255,255,255,0.12);
 }
 
+#objectives h2 {
+  text-align: center;
+}
 section p {
   max-width: 900px;
 }
