--- a/style.css
+++ b/style.css
@@ -57,9 +57,6 @@ section h2 {
   border-bottom: 1px solid rgba(255,255,255,0.12);
 }
 
-#objectives h2 {
-  text-align: center;
-}
 section p {
   max-width: 900px;
 }
@@ -427,6 +424,7 @@ p {
 
 .status h2 {
   margin-bottom: 10px;
+  text-align: left;
 }
 
 .status-note {
