--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body, p, li {
   line-height: 1.6;
 }
 
+#objectives h2 {
+  text-align: center;
+}
+
 .container {
   max-width: 1100px;
   margin: 40px auto;
@@ -424,7 +428,6 @@ p {
 
 .status h2 {
   margin-bottom: 10px;
-  text-align: left;
 }
 
 .status-note {
