--- a/style.css
+++ b/style.css
@@ -654,6 +654,18 @@ section ul {
   color: #cfd6e1;
 }
 
+/* ===== Center all major section titles ===== */
+section > h2 {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 900px;
+
+  /* visual polish */
+  margin-bottom: 28px;
+  font-weight: 600;
+}
+
 
 
 
